[package]
authors = ["Nicolas Grislain <ng@sarus.tech>"]
name = "qrlew-server"
version = "0.3.2"
edition = "2021"
description = "Qrlew - Server"
documentation = "https://docs.rs/qrlew-server"
readme = "README.md"
homepage = "https://sarus.tech/"
repository = "https://github.com/Qrlew/server"
license = "Apache-2.0"
keywords = ["sql", "data", "web", "http"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
qrlew = "0.3.8"
axum = "0.6"
tokio = { version = "1.32.0", features = ["macros", "rt-multi-thread"] }
serde = { version = "1.0", features = ["derive", "rc"] }
serde_json = "1.0"
rsa = { version = "0.9.2", features = ["sha2", "pem"] }
rand = "0.8"
base64 = "0.21"
